# croissant

./: .gitignore  CMakeLists.txt
.buzzy/: links.yaml  package.yaml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  crs_application.3  crs_application.3.pandoc  crs_application_receive.3  crs_application_receive.3.pandoc  crs_application_send.3  crs_application_send.3.pandoc  crs_id.3  crs_id.3.pandoc  crs_message.3  crs_message.3.pandoc  crs_message_decode.3  crs_message_decode.3.pandoc  crs_message_encode.3  crs_message_encode.3.pandoc  id.rst  index.rst
docs/links/: crs_application_free_message.3  crs_application_get_id.3  crs_application_set_receive.3  crs_id_is_ccw.3  crs_message_decode_uint32.3  crs_message_encode_uint32.3
include/: croissant.h
include/croissant/: context.h  id.h  local.h  node.h  parsing.h
include/dunkin/: id.h
src/: CMakeLists.txt  croissant.pc.in  dunkin.pc.in
src/croissant/: .gitattributes  root.c  test.c  test.c.rl
src/include/croissant/: application.h  context.h  local.h  maintenance.h  message.h  node.h  parse.h  tests.h
src/libcroissant/: application.c  connection-types.c  context.c  id.c  local-nodes.c  local.c  maintenance.c  message.c  node-ref.c  node.c  nodes.c  parsing.c  queue.c  routing.c  tests.c
src/libdunkin/: id.c
tests/: CMakeLists.txt  create-nodes.t  helpers.h  join.t  leaf-set.t  next-hop.t  routing-table.t  test-id.c  test-leaf-set.c  test-local-nodes.c  test-routing-table.c
